--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -26,7 +26,7 @@ abortdownload.key=A
 abortdownload.name=Afbreken
 
 aborttransfer.description=Breekt de geselecteerde transfer af
-aborttransfer.key=a
+aborttransfer.key=B
 aborttransfer.name=Breek transfer af
 
 about.description=Toont informatie over PowerFolder
@@ -56,7 +56,7 @@ about.key=h
 about.name=Help
 
 addfriend.description=Aan een gebruiker aan de vriendenlijst
-addfriend.key=f
+addfriend.key=T
 addfriend.name=Toevoegen aan vrienden
 
 addmodifierfriend.description=Voeg de bewerker van bestand toe aan lijst van vrienden
@@ -90,7 +90,7 @@ delete_confimation.text_movetorecyclebin_directory=Weet u zeker dat u de volgend
 delete_confimation.title=Verwijder bestanden?
 
 deletefile.description=Verwijder geselecteerde bestand(en)
-deletefile.key=F
+deletefile.key=V
 deletefile.name=Verwijder bestand(en)
 
 dialog.addmembertofriendlist.button.no=Nee
@@ -106,10 +106,10 @@ dialog.connect.connecting=Verbinden
 dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindings probleem
 dialog.synchronization.choose=Kies uw sync actie op
-##dialog.synchronization.receive_changes=Receive changes
+dialog.synchronization.receive_changes=Ontvang veranderingen
 dialog.synchronization.send_and_receive_changes=Verzend en ontvang veranderingen
 dialog.synchronization.send_own_changes=Verzend eigen veranderingen
-##dialog.synchronization.sychronizing=Synchronizing...
+dialog.synchronization.sychronizing=Synchronizeren...
 dialog.synchronization.title=Project synchronizatie
 dialog.unable_to_connect_to_address=Kan niet verbinden met {0}
 dialog.unable_to_connect_to_member=Kan niet verbinden met {0}
@@ -192,9 +192,9 @@ filelist.status.no_files_available_add_files_and_invite=Geen bestanden beschikba
 filelist.status.no_files_available_add_files_in_folder=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map om ze te delen of te synchronizeren
 filelist.status.no_files_available_yet_fetching_filelist=Nog geen bestanden beschikbaar... bezig bestanden lijsten op te halen
 
-##findfriends.description=Start searching for new friends
-##findfriends.key=F
-##findfriends.name=Find new Friends
+findfriends.description=Start zoeken naar nieuwe vrienden
+findfriends.key=V
+findfriends.name=Zoek nieuwe vrienden
 
 folder.check_path_length.never_show_again=Nooit meer tonen
 folder.check_path_length.text=De gezamelijke lengte van het pad naar het bestand en de bestandnaam is meer dan 255 karakters.\nDit is niet aanteraden omdat dit mogelijk niet werkt op ander Besturings Systemen als Windows 2000.\n\nFolder\: {0}\nBestand\: {1}
@@ -216,11 +216,11 @@ foldercreate.error.already_taken=Gekozen basis map is al bezet door Folder '{0}'
 foldercreate.error.it_is_base_dir=Niet in staat om Folder in Map '{0}' te openen. Dit is de PowerFolder basis map voor alle Folders\!
 foldercreate.error.unable_to_create=Maken van map '{0}' mislukt\!
 foldercreate.error.unable_to_open=Niet instaat om lokale map '{0}' te openen. Is het een bestand\!?
-foldercreate.key=s
+foldercreate.key=D
 foldercreate.name=Deel folder
 foldercreate.nameempty.text=De naam van de folder moet ingevuld worden
 foldercreate.nameempty.title=Foldernaam is verplicht
-##foldercreate.progress.text=Creating Folder '{0}'
+foldercreate.progress.text=Bezig Folder '{0}' te maken...
 foldercreate.success=Folder {0} gedeeld, lokale kopie '{1}'
 
 folderexception.dialog.text=Niet mogelijk om lid te worden van folder '{0}'.\nReden\: {1}
@@ -263,7 +263,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Aantal verwijderde bestand
 folderpanel.hometab.number_of_local_files_in_folder=Aantal lokale bestanden in Folder
 folderpanel.hometab.public_folder=Publiek
 folderpanel.hometab.secret_folder=Geheim
-##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
+folderpanel.hometab.synchronisation_eta=Synchronizatie nog
 folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
 folderpanel.hometab.total_number_of_files=Totaal aantal bestanden (lokaal+verwijderd+beschikbaar)
@@ -281,7 +281,7 @@ friendsearch.nodetable.last_seen_online=Laatste keer online
 friendsearch.nodetable.name=Naam
 friendsearch.nodetable.on_local_network=Lokaal
 
-##friendspanel.connected=Connected
+friendspanel.connected=Verbonden
 friendspanel.currently_online=Nu verbonden
 friendspanel.n_a=n/b
 friendspanel.search_for_user=Zoek gebruiker
@@ -302,7 +302,7 @@ general.folder=Folder
 general.folder.public=Publiek (toegangkelijk voor iedereen)
 general.folder.secret=Prive (vereist invitatie)
 general.foldername=Naam
-##general.friendlist=Friendlist
+general.friendlist=Vriendenlijst
 general.from=van
 general.hide=verberg
 general.inet=i-net
@@ -453,22 +453,22 @@ openfile.description=Open (Start) geseleteerd bestand
 openfile.key=O
 openfile.name=Open bestand
 
-##plugin_disable.description=Disable (and stop) Plugin
-##plugin_disable.key=D
-##plugin_disable.name=Disable
+plugin_disable.description=Deactiveer / Stop Plugin
+plugin_disable.key=S
+plugin_disable.name=Stop
 
-##plugin_enable.description=Enable (and start) Plugin
-##plugin_enable.key=E
-##plugin_enable.name=Enable
+plugin_enable.description=Activeer / Start Plugin
+plugin_enable.key=S
+plugin_enable.name=Start
 
-##pluginsettings.description=Open the settings for this plugin
-##pluginsettings.key=S
-##pluginsettings.name=Settings
+pluginsettings.description=Open de instellingen voor deze plugin
+pluginsettings.key=I
+pluginsettings.name=Instellingen
 
 preferences.description=Opent de instellingen
 preferences.dialog.advPort=Poort
 preferences.dialog.advPort.tooltip=Geef een komma (",") -gescheiden lijst van poorten waarop PowerFolder moet luisteren voor inkomende verbindingen
-##preferences.dialog.advanced.title=Advanced
+preferences.dialog.advanced.title=Geavanceerd
 preferences.dialog.autostartleechfiles=Automatich start ander P2P prog.
 preferences.dialog.basedir=Basis map voor folders
 preferences.dialog.basedir.title=Kies de basis folder lokatie
@@ -478,14 +478,14 @@ preferences.dialog.bind.tooltip=Selecteer het adres welke PowerFolder moet gebru
 preferences.dialog.bindDescr=Interface beschrijving
 preferences.dialog.colortheme=Kleur thema
 preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
-##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
-##preferences.dialog.dialogs.title=Dialogs
-##preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
-##preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
-##preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
+preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
+preferences.dialog.dialogs.title=Dialogen
+preferences.dialog.dialogs.warnoncloseifnotinsync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
+preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij lgelimieerde verbinding (Geen binnenkomende verbindingen)
+preferences.dialog.dialogs.warnonpossiblefilenameproblems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
 preferences.dialog.dyndns=Mijn - dynamic - DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
-##preferences.dialog.dyndns.title=DynDNS
+preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsCurrentIP=Huidig IP
 preferences.dialog.dyndnsHostname=Hostname
 preferences.dialog.dyndnsLoginPanel=Login
@@ -499,50 +499,50 @@ preferences.dialog.dyndnsUpdateUnknowError=Bijwerk resultaat\: Onbekende fout\!
 preferences.dialog.dyndnsUpdateWarning=Waarschuwing\!  Bijwerk resultaat
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Gebruikersnaam
-##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
-##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
+preferences.dialog.dyndnsmanager.nomatch.text=De ingegeven DynDns klopt niet met deze host.\nWeet u zeker dat u deze wilt gebruiken?
+preferences.dialog.dyndnsmanager.nomatch.title=De ingegeven DynDns klopt niet met deze host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
-##preferences.dialog.general.title=General
+preferences.dialog.general.title=Algemeen
 preferences.dialog.language=Taal
 preferences.dialog.lanlinesettings=LAN verbindings snelheid
 preferences.dialog.linesettings=Internet verbindings snelheid
-##preferences.dialog.network.title=Network
-##preferences.dialog.networkmode.lanonly=LAN only
-##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-##preferences.dialog.networkmode.private=Private Networking   
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
-##preferences.dialog.networkmode.public=Public Networking
-##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
+preferences.dialog.network.title=Netwerk
+preferences.dialog.networkmode.lanonly=alleen LAN
+preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma\'s in het Local Area Network.<BR>De enige verbinding \'uit\' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
+preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Zet publiek folder delen uit. Beperkt verbindingen tot interesante gebruikers<BR>Feitelijk alleen naar vrienden, gebruikers op LAN en gebruikers, die lid zijn van uw folders.<BR>Verder verbind PowerFolder met aan aantal gebruikers zodat het mogelijk is vrienden in het netwerk te vinden.</BODY></HTML>
+preferences.dialog.networkmode.private=Privé Netwerk
+preferences.dialog.networkmode.public=Publiek Netwerk
+preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Zet publiek Folder delen aan.<BR>Privé folders zullen altijd een invitaie vereisen, ongeacht de netwerk mode.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
-##preferences.dialog.plugin.classname=Java classname
-##preferences.dialog.plugin.description=Description
-##preferences.dialog.plugin.name=Name
-##preferences.dialog.plugin.status=Status
-##preferences.dialog.plugin.status_disabled=Disabled
-##preferences.dialog.plugin.status_enabled=Enabled
-##preferences.dialog.plugin.title=Plugin
+preferences.dialog.plugin.classname=Java classname
+preferences.dialog.plugin.description=Beschrijving
+preferences.dialog.plugin.name=Naam
+preferences.dialog.plugin.status=Status
+preferences.dialog.plugin.status_disabled=Actief
+preferences.dialog.plugin.status_enabled=InActief
+preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Door veranderingen in de instellingen is het nootzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
-##preferences.dialog.showadvanged=Show Advanged Preferences
-##preferences.dialog.showpreviewpanel=Enable internal image preview
-##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
-##preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
+preferences.dialog.showadvanged=Laat geadvanceerde instellingen zien
+preferences.dialog.showpreviewpanel=Activeer interne foto preview 
+preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>U kunt de interne foto preview vinden onder Mijn Folders->Folder->Bestanden->Details<BR>(Deze eigenschap van die programma is geheugen "hongerig" bij grote jpg's (>500K), gebruik voorzichtig.)</BODY></HTML>
+preferences.dialog.silentthrottle=Passive mode bandbreedte beperking 
+preferences.dialog.silentthrottle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
 preferences.dialog.statusCantResolve=DynDns {0}\: kan niet worden gevonden\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} controle gelukt\!
 preferences.dialog.statusValidFailed=DynDns {0}\: controle mislukt\!
 preferences.dialog.statusWaitDynDns=S.V.P. even wachten, DynDns {0} wordt gecontroleerd\!
 preferences.dialog.title=Instellingen
 preferences.dialog.titleProcessing=verwerken...
-##preferences.dialog.useziponlan=Use ZIP Compression on LAN 
-##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
+preferences.dialog.useziponlan=Gebruik ZIP compressie op LAN 
+preferences.dialog.useziponlan.tooltip=Activeer als bestanden makkelijk te comprimeren zijn (Dit beinvloed mogelijk het CPU gebruik)
 preferences.dialog.warnningMessage=Waarschuwing
 preferences.dialog.xbehavior=Sluit gedrag
 preferences.dialog.xbehavior.exit=Programma afsluiten
 preferences.dialog.xbehavior.minimize=Minimalizeer naar system tray
-preferences.key=p
+preferences.key=I
 preferences.name=Instellingen
 
 previewfiles.description=Preview bestanden in deze Folder
@@ -616,7 +616,7 @@ rootpanel.connected_users=Verbonden gebruikers
 rootpanel.friends=Vrienden
 
 scanallfolders.description=Synchronizeerd alle Folders
-scanallfolders.key=a
+scanallfolders.key=F
 scanallfolders.name=Sync Folders
 
 scanfolder.description=Checkt alle bestanden voor veranderingen
@@ -690,7 +690,7 @@ systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
 
-##title.friends=Friends
+title.friends=Vrienden
 title.my.folders=Mijn Folders 
 title.network.statistics=Netwerk Statistieken
 title.public.folder=Publieke Folder
@@ -718,7 +718,7 @@ webservice_request_folder_leave.key=s
 webservice_request_folder_leave.name=Stop WebStore
 
 wizard.basicsetup.enternick=Voer gebruikersnaam in
-##wizard.basicsetup.lanonly=LAN only
+wizard.basicsetup.lanonly=Alleen LAN
 wizard.basicsetup.networking=Netwerk Mode
 wizard.basicsetup.private=Prive/Gesloten groep
 wizard.basicsetup.public=Publiek Netwerk
