shorter texts italian

--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -152,7 +152,7 @@ empty_recycle_bin_confimation.title=Svuota il cestino diPowerFolder
 
 enablesilentmode.description=Disabilita tutti i processi pesanti, come la scansione per i cambiamenti nelle cartelle, eliminando qualsiasi attivit\u00e0 su disco
 enablesilentmode.key=s
-enablesilentmode.name=Esegui in modo silenzioso
+enablesilentmode.name=Esegui silenzioso
 
 filecopier.progressdialog.text=Copia i files ....
 filecopier.progressdialog.title=Copia dei file in corso
@@ -193,7 +193,7 @@ filelist.status.no_files_available_add_files_in_folder=Nessun file disponibile..
 filelist.status.no_files_available_yet_fetching_filelist=Nessun file ancora disponibile... recupero la lista dei file
 
 findfriends.description=Inizia ricerca di nuovi amici
-findfriends.key=n
+findfriends.key=T
 findfriends.name=Trova nuovi amici
 
 folder.check_path_length.never_show_again=Non chiederlo piu'
@@ -217,7 +217,7 @@ foldercreate.error.it_is_base_dir=Impossibile arprire la cartella nella director
 foldercreate.error.unable_to_create=Impossibile creare la directory '{0}'
 foldercreate.error.unable_to_open=Impossibile aprire la directory locale '{0}'. Sembra essere un file \!
 foldercreate.key=C
-foldercreate.name=Condividi una cartella
+foldercreate.name=Condividi cartella
 foldercreate.nameempty.text=Il nome della cartella non deve essere vuoto
 foldercreate.nameempty.title=Nome della cartella richiesto
 foldercreate.progress.text=Creazione Cartella '{0}'
@@ -342,7 +342,7 @@ invitationfiles.description=Inviti PowerFolder
 
 join_by_invitation.description=Raggiungi la Cartella su Invito, Carica l'Invito da disco
 join_by_invitation.key=I
-join_by_invitation.name=Carica l'invito
+join_by_invitation.name=Carica invito
 
 joinfolder.already_joined_text=Sei gi\u00e0 un membro della cartella {0}
 joinfolder.already_joined_title=Impossibile aggiungersi {0}
@@ -617,7 +617,7 @@ rootpanel.friends=Amici
 
 scanallfolders.description=Sincronizza tutte le cartelle ora
 scanallfolders.key=a
-scanallfolders.name=Sincronizza Cartelle
+scanallfolders.name=Sincro Cartelle
 
 scanfolder.description=Controlla ora tutte le cartelle per i cambiamenti di file
 scanfolder.key=s
@@ -634,7 +634,7 @@ sendinvitation.description=Invita un utente ad utilizzare una cartella
 sendinvitation.email=All' email...
 sendinvitation.example_emailaddress=email@domain.com
 sendinvitation.folder.text=Invia un invito a
-sendinvitation.folder.title=Invia un invito
+sendinvitation.folder.title=Invia invito
 sendinvitation.key=I
 sendinvitation.name=Invia un invito
 sendinvitation.placetostore=Scegli un posto dove memorizzare l'invito
