--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -36,6 +36,7 @@ about.dialog.contributers=Mitarbeiter
 about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
+
 about.dialog.professional_folder_sharing_tool=Professionelle Dateisychronisation
 about.dialog.support=Support
 about.dialog.team=Team
@@ -151,6 +152,10 @@ empty_recycle_bin_confimation.title=PowerFolder Papierkorb leeren
 enablesilentmode.description=Deaktiviert alle aufwendigen Aufgaben, z.B. die Suche nach \u00C4nderungen in den Foldern.
 enablesilentmode.key=s
 enablesilentmode.name=Zum Ruhemodus
+
+findfriends.description=Starte die Suche nach Freunden
+findfriends.key=F
+findfriends.name=Freunde finden
 
 filecopier.progressdialog.text=Kopiere Dateien...
 filecopier.progressdialog.title=Kopiervorgang aktiv
@@ -278,6 +283,7 @@ friendspanel.n_a=n/a
 friendspanel.search_for_user=Nach einem Benutzer suchen
 friendspanel.search_results=Suchergebnisse
 
+general.friendlist=Freunde
 general.availability=Verfügbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
