--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -287,9 +287,9 @@ general.friendlist=Freunde
 general.availability=Verfügbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
-general.datawarning.0=Nicht vergessen
-general.datawarning.1=Ihre Dateien werden damit anderen zug\u00E4nglich.
-general.datawarning.2=Ver\u00F6ffentlichen Sie niemals vertrauliche Daten\!
+general.datawarning.0=
+general.datawarning.1=
+general.datawarning.2=
 general.days={0} Tage
 general.downloads=Downloads
 general.estimatedsize=gesch\u00E4tzte Gr\u00F6\u00DFe
